--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GraphQL API - Frontend</title>
+    <title>GraphQL API - Apollo Client</title>
   </head>
   <body>
     <div id="root"></div>
